cmake_minimum_required(VERSION 3.8)
project(kinematic_model)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Armadillo REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

include_directories(
  include
  ${EIGEN3_INCLUDE_DIRS}  # Add this line to include Eigen
)

add_executable(kinematic_model src/kinematic_model.cpp)
target_link_libraries(kinematic_model ${EIGEN3_LIBRARIES})
ament_target_dependencies(kinematic_model rclcpp geometry_msgs nav_msgs std_msgs Eigen3)

install(TARGETS
   kinematic_model
   DESTINATION lib/${PROJECT_NAME}
 )


ament_package()
